# vacollector_hh

./: .gitignore  LICENSE  README.md  pyproject.toml
vacolector_hh/: all_quieries.sql  config.py  constants.py  create_tables.sql  data_classes.py  db_engine.py  db_manager.py  employer.txt  file_handler.py  main.py  parser.py  parser_hh.py  queries.sql  query.sql
