[tool.poetry]
name = "vacolector-hh"
version = "0.1.0"
description = ""
authors = ["Tigran Saatchyan TSA <mr.saatchyan@yandex.com>"]
readme = "README.md"
packages = [{include = "vacolector_hh"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.develop.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
